[gd_scene load_steps=6 format=3 uid="uid://ck6moboc5utvp"]

[ext_resource type="Script" path="res://units/generic/script/unit.gd" id="1_qdtmx"]
[ext_resource type="PackedScene" uid="uid://bdis4c2xfx62w" path="res://tools/scene/drag.tscn" id="2_fcsd6"]
[ext_resource type="Texture2D" uid="uid://cfv3wp7xajfdu" path="res://units/generic/sprite/stars1.png" id="3_xvaji"]
[ext_resource type="PackedScene" uid="uid://do5n0pjc3q8yl" path="res://units/generic/scene/info_panel.tscn" id="4_qbaof"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eh57c"]
radius = 6.0
height = 14.0

[node name="unit" type="Node2D"]
script = ExtResource("1_qdtmx")
attack = Array[int]([0, 0, 0])
hp = Array[int]([0, 0, 0])
text = Array[String](["", "", ""])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -4)

[node name="Marker2D" type="Marker2D" parent="."]

[node name="drag" parent="." instance=ExtResource("2_fcsd6")]

[node name="CollisionShape2D" parent="drag/Area2D" index="0"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_eh57c")

[node name="star" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("3_xvaji")
hframes = 3

[node name="info_panel" parent="." instance=ExtResource("4_qbaof")]
visible = false
position = Vector2(-29, -79)

[connection signal="input_event" from="drag/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_exited" from="drag/Area2D" to="." method="_on_area_2d_mouse_exited"]

[editable path="drag"]
[editable path="info_panel"]
